# react-console

./: .gitignore  .lintstagedrc.js  ARCHITECTURAL_REDESIGN_PLAN.md  ARCHITECTURAL_REDESIGN_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BELL_DEBUG_TRACKING.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MULTI_BUFFER_IMPLEMENTATION.md  README.md  TODO.md  babel.config.cjs  babel.config.js  build.config.ts  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  rollup.config.js  tsconfig.build.json  tsconfig.json  typedoc.json  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md
.husky/: commit-msg  pre-push
docs/: ANIMATIONS_GUIDE.md  ARCHITECTURE_GUIDE.md  BUILD_OPTIMIZATION.md  CLI_ARCHITECTURE.md  CLI_COMPILATION.md  CLI_FRAMEWORK_GUIDE.md  CLI_SCAFFOLDING.md  COMPONENT_LIFECYCLE.md  EVENT_HANDLING_GUIDE.md  GIT_SETUP_SUMMARY.md  GIT_WORKFLOW.md  INK_COMPARISON.md  INPUT_HANDLING_GUIDE.md  LAYOUT_GUIDE.md  MIGRATION_GUIDE.md  NPM_PUBLICATION.md  PERFORMANCE_GUIDE.md  RENDERER_ARCHITECTURE.md  RUST_LIFT_PLAN_0.2.0.md  SIDE_EFFECTS.md  STATE_MANAGEMENT.md  STYLE_LIBRARIES.md  STYLING_GUIDE.md  TESTING_GUIDE.md  TODO_ROADMAP.md
examples/: animations.tsx  appstate-backhandler.tsx  basic.tsx  bell.tsx  clipboard.tsx  event-handling.tsx  flatlist-ref.tsx  flatlist.tsx  flex-wrap.tsx  flexbox.tsx  forms.tsx  fullscreen.tsx  grid.tsx  input-formatting.tsx  input-types.tsx  interactive.tsx  (+16 more)
native/: Cargo.toml
native/prebuilds/: react_console_native.node
native/src/: lib.rs
(+723 files in other folders)
